--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kolbots</title>
+    <title>JOJOQ</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="shortcut icon" href="images/logo.jpg" type="image/png">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -17,7 +17,7 @@
             </div> 
     
             <div class="header__buttons">
-                <div class="logo">Kolbots</div>
+                <div class="logo">JOJOQ</div>
                 <div class="ca">CA:  <img src="images/copy.png" alt=""></div>
                 <a href="https://x.com/kol_bots" class="header__button">
                     <img src="images/twitter.png" alt="">
@@ -29,7 +29,7 @@
                 </a>
                 <a href="#" class="header__button">
                     <img src="images/link.png" alt="">
-                    $KB
+                    $JOJO
                 </a>
                 <a href="https://kolscan.io/" class="header__button">
                     <img src="images/kol.png" alt="">
@@ -96,7 +96,7 @@
                 </div>
                 <ul class="bot__list">
                     <li class="bot__listItem">
-                        Information gathered and scanned via Kolbots algorithm
+                        Information gathered and scanned via JOJOQ algorithm
                     </li>
                     <li class="bot__listItem">
                         Access to 5+ platforms for gathering data
@@ -369,16 +369,16 @@
             <div class="modal-content">
           <span class="close2">×</span>
           <div id="modal-info2">
-            Kolbots: Tools to Track and Snipe Memecoin Traders
+            JOJOQ: Tools to Track and Snipe Memecoin Traders
             <br><br>
-            Kolbots is a platform that helps you track and snipe top memecoin traders quickly and easily. It provides ready-made tools and bots, letting you take advantage of market trends and big trades in real-time.
+            JOJOQ is a platform that helps you track and snipe top memecoin traders quickly and easily. It provides ready-made tools and bots, letting you take advantage of market trends and big trades in real-time.
             <br><br>
-            What Kolbots Offers:
+            What JOJOQ Offers:
             Sniping Bots: Automatically buy and sell trending memecoins by following top traders.<br>
             Custom Tools: Create your own bots to match your trading style.<br>
             Real-Time Tracking: Follow whale wallets and top traders instantly.<br>
             Easy to Use: Simple templates for beginners and advanced options for pros.<br><br>
-            Where Can You Use Kolbots?<br><br>
+            Where Can You Use JOJOQ?<br><br>
             DEXs: Works on platforms like Uniswap, PancakeSwap, and Solana-based exchanges.<br>
             Wallet Monitoring: Tracks big traders for potential memecoin opportunities.<br>
             Alerts: Connect bots with Telegram or Discord for instant updates.<br>
